<?xml version="1.0" encoding="utf-8"?>
<!--

    This file is part of Whisper To Input, see <https://github.com/j3soon/whisper-to-input>.

    Copyright (c) 2023-2024 Yan-Bin Diau, Johnson Sun

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program. If not, see <https://www.gnu.org/licenses/>.

-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    android:id="@+id/keyboard_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:clipToPadding="false"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <!-- Compact horizontal layout -->
    <TextView
        android:id="@+id/debug_key_display"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="Keys..."
        android:textColor="#00FF00"
        android:textSize="4sp"
        android:maxLines="3"
        android:fontFamily="monospace"
        android:background="#80000000"
        android:padding="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageButton
        style="@style/RegularImage"
        android:id="@+id/btn_settings"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:backgroundTint="#00000000"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_settings"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/debug_key_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        style="@style/RegularText"
        android:id="@+id/label_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whisper_to_input"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/btn_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Compact mic button with progress indicator -->
    <FrameLayout
        android:id="@+id/btn_mic_frame"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/btn_mic"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/start_speech_to_text"
            android:scaleType="fitCenter"
            android:src="@drawable/mic_idle" />

        <ProgressBar
            android:id="@+id/pb_waiting_icon"
            style="?android:attr/progressBarStyle"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:clickable="false"
            android:focusable="false"
            android:visibility="invisible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mic_ripples"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/mic_ripple_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0"
                android:src="@drawable/mic_ripple_0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/mic_ripple_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0"
                android:src="@drawable/mic_ripple_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/mic_ripple_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0"
                android:src="@drawable/mic_ripple_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/mic_ripple_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0"
                android:src="@drawable/mic_ripple_3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <ImageButton
        style="@style/RegularImage"
        android:id="@+id/btn_cancel"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_cancel"
        android:visibility="invisible"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_retry"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageButton
        style="@style/RegularImage"
        android:id="@+id/btn_retry"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_retry"
        android:visibility="invisible"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_backspace"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.example.whispertoinput.keyboard.BackspaceButton
        style="@style/RegularImage"
        android:id="@+id/btn_backspace"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:backgroundTint="#00000000"
        android:contentDescription="@string/backspace_button_hint"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_backspace"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_space_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        style="@style/RegularImage"
        android:id="@+id/btn_space_bar"
        android:layout_width="50dp"
        android:layout_height="32dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/desc_space_bar"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_space_bar"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_enter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        style="@style/RegularImage"
        android:id="@+id/btn_enter"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/start_transcribing"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_enter"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_previous_ime"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageButton
        style="@style/RegularImage"
        android:id="@+id/btn_previous_ime"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:backgroundTint="#00000000"
        android:contentDescription="@string/btn_previous_ime_hint"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_previous_ime"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
